--- a/TagSystemViewer/TagSystemViewer.csproj
+++ b/TagSystemViewer/TagSystemViewer.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-rc.2.23479.6" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
         <PackageReference Include="SQLite.Net.Extensions" Version="3.0.0" />
+        <PackageReference Include="SQLite.Net.Extensions.Async" Version="3.0.1" />
     </ItemGroup>
 
 
